# knowledge-graph

./: .gitignore  LICENSE  README.md  bootstrap.md  cline_bootstrap.md  pyproject.toml
src/genesise/: main.py
src/genesise/commands/: flag_stale.py  gap_fill.py  init.py  lint.py  list_nodes.py  rename.py  summary.py  sync.py
src/genesise/engine/: hashing.py  manifest.py  registry.py  workspace.py
src/genesise/templates/: bootstrap.md
src/kg/: console.py  main.py
src/kg/commands/: flag_stale.py  init.py  lint.py  list_nodes.py  rename.py  summary.py  sync.py  verify.py
src/kg/engine/: atomic.py  nodes.py
