[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genesise"
version = "0.1.0"
description = "CLI framework for AI-maintained local knowledge graphs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["knowledge-graph", "second-brain", "llm", "rag", "notes"]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
gns = "genesise.main:app"

[project.urls]
Repository = "https://github.com/ihsankhwaritsmi/knowledge-graph"

[tool.hatch.build.targets.wheel]
packages = ["src/genesise"]
